--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@ git commit -m "first commit"<!DOCTYPE html>
     </section>
     <footer class="footer">
         <div class="footer--container">
-            <p>Feito por: Thiago Batista 
+            <p>Feito por: Ezequias Santos 
             <a href="https://github.com/ThiagoBdev">
                 <img src="./dist/images/github.png" alt="github">
             </a>
